clusters/orchard/apps/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
spec:
  tls:
    - hosts:
        - argocd.homehill.de
      secretName: homehill-wildcard-tls
  rules:
    - host: argocd.homehill.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
